--- a/src/partials/page-footer.html
+++ b/src/partials/page-footer.html
@@ -1,4 +1,4 @@
-<footer class="page-footer">
+<footer class="page-footer" id="footer">
   <div class="container">
     <!-- Основной блок с текстом и иконками.
       Содержит в себе 2 блока, которые меняют расположение
@@ -16,7 +16,9 @@
         <div>
           <ul class="ul-icon">
             <li class="item-icon">
-              <a class="contacts-icon-link" href="https://github.com/" target="_blank" rel="noopener noreferer">
+              <a class="contacts-icon-link" href="https://github.com/" target="_blank" rel="noopener noreferer"
+                aria-label="github.com">
+                <span class="visually-hidden">github.com</span>
                 <svg class="contacts-icon-svg">
                   <use href="./images/svg/sprite.svg#icon-github"></use>
                 </svg>
@@ -24,7 +26,9 @@
               </a>
             </li>
             <li class="item-icon">
-              <a class="contacts-icon-link" href="https://t.me/frontend_info" target="_blank" rel="noopener noreferer">
+              <a class="contacts-icon-link" href="https://t.me/frontend_info" target="_blank" rel="noopener noreferer"
+                aria-label="telegram">
+                <span class="visually-hidden">telegram</span>
                 <svg class="contacts-icon-svg">
                   <use href="./images/svg/sprite.svg#icon-telegram"></use>
                 </svg>
@@ -32,7 +36,9 @@
               </a>
             </li>
             <li class="item-icon">
-              <a class="contacts-icon-link" href="https://fasebook.com/" target="_blank" rel="noopener noreferer">
+              <a class="contacts-icon-link" href="https://fasebook.com/" target="_blank" rel="noopener noreferer"
+                aria-label="fasebook.com">
+                <span class="visually-hidden">fasebook.com</span>
                 <svg class="contacts-icon-svg">
                   <use href="./images/svg/sprite.svg#icon-facebook"></use>
                 </svg>
@@ -45,7 +51,6 @@
         <div class="phone">
           <span>Feel free to contact</span>
           <a class="color-tel" href="tel:+61(0)383766284">+61 (0) 383 766 284</a>
-
         </div>
       </div>
 
