--- a/src/partials/site-nav.html
+++ b/src/partials/site-nav.html
@@ -1,15 +1,15 @@
 <header class="site-nav">
   <div class="container">
     <div class="container-site-nav">
-      <img class="logo" src="../src/images/site-nav/logo.png">
+      <img class="logo-site-nav" src="../src/images/site-nav/logo.png">
       <ul class="site-nav-list">
-        <li class="site-nav-item"><a href="#home" class="link link-site-nav">Home</a></li>
-        <li class="site-nav-item"><a href="#about-us" class="link link-site-nav">About us</a></li>
-        <li class="site-nav-item"><a href="how-it’s-made" class="link link-site-nav">How it’s made?</a></li>
-        <li class="site-nav-item"><a href="#our-products" class="link link-site-nav">Our products</a></li>
-        <li class="site-nav-item"><a href="#contact" class="link link-site-nav">Contact</a></li>
+        <li class="site-nav-item"><a href="#home" class="link-site-nav">Home</a></li>
+        <li class="site-nav-item"><a href="#about-us" class="link-site-nav">About us</a></li>
+        <li class="site-nav-item"><a href="#how-it’s-made" class="link-site-nav">How it’s made?</a></li>
+        <li class="site-nav-item"><a href="#our-products" class="link-site-nav">Our products</a></li>
+        <li class="site-nav-item"><a href="#footer" class="link-site-nav">Contact</a></li>
       </ul>
-      <button class="btn-site-nav burger-menu"  data-menu-button aria-expanded="true">
+      <button class="btn-site-nav burger-menu-site-nav"  data-menu-button aria-expanded="true">
         <span class="icon-burger-site-nav" ></span>
         <svg width="17" height="17">
           <use class="icon-cross-site-nav"  href="../src/images/svg/sprite.svg#icon-close-cross"></use>
@@ -25,7 +25,7 @@
       </button>
     </div>
   </div>
-  <div class="mobile-nav" data-menu> 
+  <div class="mobile-nav-site-nav" data-menu> 
     <button class="container-btn-site-nav btn-site-nav">
       <span>
         Buy now
@@ -34,14 +34,14 @@
         <use href="../src/images/svg/sprite.svg#icon-bracket-right"></use>
       </svg>
     </button>
-    <ul class="mobile-nav-list">
-      <li class="site-nav-item"><a href="#home" class="link link-mobile-site-nav">Home</a></li>
-      <li class="site-nav-item"><a href="#about-us" class="link link-mobile-site-nav">About us</a></li>
-      <li class="site-nav-item"><a href="how-it’s-made" class="link link-mobile-site-nav">How it’s made?</a></li>
-      <li class="site-nav-item"><a href="our-product" class="link link-mobile-site-nav">Our products</a></li>
-      <li class="site-nav-item"><a href="contact" class="link link-mobile-site-nav">Contact</a></li>
+    <ul class="mobile-nav-list-site-nav">
+      <li class="site-nav-item"><a href="#home" class="link-mobile-site-nav">Home</a></li>
+      <li class="site-nav-item"><a href="#about-us" class="link-mobile-site-nav">About us</a></li>
+      <li class="site-nav-item"><a href="#how-it’s-made" class="link-mobile-site-nav">How it’s made?</a></li>
+      <li class="site-nav-item"><a href="#our-product" class="link-mobile-site-nav">Our products</a></li>
+      <li class="site-nav-item"><a href="#footer" class="link-mobile-site-nav">Contact</a></li>
     </ul>
-  </div> -->
+  </div>
 </header>
 
 
