делит блоки продукта в модалке

--- a/src/partials/site-nav.html
+++ b/src/partials/site-nav.html
@@ -10,7 +10,7 @@
         <li class="site-nav-item"><a href="" class="link link-site-nav">Contact</a></li>
       </ul>
       <button class="btn-site-nav burger-menu"   data-menu-button> <span></span> </button>
-      <button class="container-btn-site-nav btn-site-nav-desktop btn-site-nav">
+      <button data-modal-open class="container-btn-site-nav btn-site-nav-desktop btn-site-nav">
         <span class="">
           Buy now
         </span>
@@ -24,7 +24,7 @@
             <use href="../src/images/svg/sprite.svg#icon-close-cross"></use>
           </svg>
         </button>
-        <button class="container-btn-site-nav btn-site-nav">
+        <button data-modal-open class="container-btn-site-nav btn-site-nav">
           <span >
             Buy now
           </span>
