--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -1,6 +1,64 @@
 
-<div class="backdrop is-hidden" data-modal>
+<div class="backdrop" data-modal>
   <div class="modal">
     <!-- Ваш код здесь -->
+    <h2 class="title-modal">your order</h2>
+    <ul class="modal-list">
+        <li class="modal-product-item icecream-item">
+            <h3 class="title-modal-product"><span>ice cream</span></h3>
+        </li>
+        <li class="modal-product-item  icecoffee-item">
+            <h3 class="title-modal-product"><span>ice coffee</span></h3>
+        </li>
+        <li class="modal-product-item milkshakes-item">
+            <h3 class="title-modal-product"><span>milkshakes</span></h3>
+        </li>        
+    </ul>
+
+
+    <!-- <form>
+        <div class="modal-blocks">
+            <label for="name" class="form-label">Имя</label>
+            <input type="text" class="form-input" name="user-name" id="name">
+            <svg class="modal-icons-svg">
+                <use href="./images/symbol-defs.svg#icon-person-black"></use>
+            </svg>
+            
+        </div>
+        <div class="modal-blocks">
+            <label for="tel" class="form-label">Телефон</label>
+            <input type="tel" class="form-input" name="user-tel" id="tel">
+            <svg class="modal-icons-svg">
+                <use href="./images/symbol-defs.svg#icon-phone-black"></use>
+                
+            </svg>
+        </div>
+        <div class="modal-blocks">
+            <label for="email" class="form-label">Почта</label>
+            <input type="email" class="form-input" name="user-email" id="email">
+            <svg class="modal-icons-svg">
+                <use href="./images/symbol-defs.svg#icon-email-black"></use>
+            </svg>
+        </div>
+        <div>
+            <label for="message" class="form-label">Комментарий</label>
+            <textarea name="message" class="form-textarea" id="message" cols="30" rows="5" placeholder="Введите текст"></textarea>
+        </div>
+        <div class="modal-blocks">
+            
+            <label for="checkbox" class="check-label"><span>Соглашаюсь с рассылкой и принимаю </span><span class="color-check-text">Условия договора</span></label>
+            <input type="checkbox" class="check-class" name="user-checkbox" id="checkbox">
+            <span class="checkbox-icon"></span>
+        </div>   
+        <button type="submit" class="button-hero"><span class="text-button-hero">Отправить</span></button>            
+
+    </form> -->
+
+    <!-- <button class="close-btn" data-modal-close>
+        <svg class="close-icon">
+            <use href="./images/symbol-defs.svg#icon-close-black"></use>
+                
+        </svg>
+    </button> -->
   </div>
 </div>
