прописывает инпуты в модалке

--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -5,13 +5,45 @@
     <h2 class="title-modal">your order</h2>
     <ul class="modal-list">
         <li class="modal-product-item icecream-item">
-            <h3 class="title-modal-product"><span>ice cream</span></h3>
+            <form>
+                <div class="modal-form-container">
+                    <input class="input-modal-checkbox" type="checkbox" name="ice-creame" id="ice-cream">
+                    <label for="ice-cream"><span class="title-modal-product">ice cream</span></label>
+
+                </div>
+                <div class="modal-form-container">
+                    <label for="number" class="label-modal">Amount</label>
+                    <input type="number" class="input-modal" name="amount-icecream" id="number" placeholder="1,2,3,4....">
+                </div>
+            </form>
         </li>
+
         <li class="modal-product-item  icecoffee-item">
-            <h3 class="title-modal-product"><span>ice coffee</span></h3>
+            <form>
+                <div class="modal-form-container">
+                    <input class="input-modal-checkbox" type="checkbox" name="ice-coffee" id="ice-coffee">
+                    <label for="ice-coffee"><span class="title-modal-product">ice coffee</span></label>
+
+                </div>
+                <div class="modal-form-container">
+                    <label for="number" class="label-modal">Amount</label>
+                    <input type="number" class="input-modal" name="amount-icecoffee" id="number" placeholder="1,2,3,4....">
+                </div>
+            </form>            
         </li>
         <li class="modal-product-item milkshakes-item">
-            <h3 class="title-modal-product"><span>milkshakes</span></h3>
+            <form>
+                <div class="modal-form-container">
+                    <input class="input-modal-checkbox" type="checkbox" name="milkshakes" id="milkshakes">
+                    <label for="milkshakes"><span class="title-modal-product">milkshakes</span></label>
+
+                </div>
+                <div class="modal-form-container">
+                    <label for="number" class="label-modal">Amount</label>
+                    <input type="number" class="input-modal" name="amount-milkshakes" id="number" placeholder="1,2,3,4....">
+                </div>
+            </form>   
+            <!-- <h3 class="title-modal-product"><span>milkshakes</span></h3> -->
         </li>        
     </ul>
 
