--- a/src/sass/_modal.scss
+++ b/src/sass/_modal.scss
@@ -112,3 +112,28 @@
   margin: 0;
   color: $white;
 }
+
+.input-modal-checkbox {
+// margin-left: 50px;
+
+}
+
+.label-modal {
+  display: block;
+  // margin-left: 50px;
+}
+
+.input-modal {
+  display: block;
+  
+}
+
+.modal-form-container {
+  margin-left: 50px;
+  margin-bottom: 10px;
+}
+
+.label-modal {
+  color: $white;
+  margin-bottom: 5px;
+}
