--- a/src/partials/manufacture.html
+++ b/src/partials/manufacture.html
@@ -1,4 +1,4 @@
-<section class="manufacture">
+<section class="manufacture" id="manufacture">
   <div class="container">
     <h3 class="manu__subtitle">tradition and love</h3>
     <h2 class="manu__title">how it’s made?</h2>
