--- a/src/sass/_locations.scss
+++ b/src/sass/_locations.scss
@@ -17,23 +17,53 @@ p {
   background: linear-gradient(180deg, $white 10%, $secondary-bg-color 0);
 }
 
-.container {
-  border: 1px solid blue;
+@media screen and (min-width: $tablet) {
+  .locations {
+    padding-top: 69px;
+    padding-bottom: 158px;
+    background: linear-gradient(180deg, $white 18%, $secondary-bg-color 0);
+  }
+}
+
+@media screen and (min-width: $tablet) {
+  .locations-card-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+  }
 }
 
 .locations-card-item {
-  width: 220px;
-  margin-bottom: 20px;
-  margin-left: auto;
-  margin-right: auto;
-  padding: 43px 21px 43px 20px;
-
   background: $white;
   box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
   border-radius: 24px;
+}
 
-  &:last-child {
-    margin-bottom: 0px;
+@media screen and (max-width: $tablet - 1) {
+  .locations-card-item {
+    width: 220px;
+    margin-bottom: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 43px 21px 43px 20px;
+
+    &:last-child {
+      margin-bottom: 0px;
+    }
+  }
+}
+
+@media screen and (min-width: $tablet) {
+  .locations-card-item {
+    flex-basis: calc((100% - 40px) / 3);
+    margin-right: 20px;
+    padding: 50px 32px 50px 31px;
+
+    &:last-child {
+      margin-right: 0px;
+    }
   }
 }
 
@@ -44,20 +74,44 @@ p {
   line-height: 1.86;
   text-transform: uppercase;
 
-  display: flex;
+  min-width: 80px;
+  margin-bottom: 25px;
+  padding-left: 24px;
+  padding-right: 24px;
+
+  display: inline-flex;
   align-items: center;
   justify-content: center;
-  height: 16px;
-  width: 80px;
-  margin-bottom: 25px;
 
   color: $white;
   background-color: $primary-overlay-decor-color;
   border-radius: 4px;
 
   &.locations-ftruck {
-    width: 130px;
     background-color: $secondary-overlay-decor-color;
+    min-width: 130px;
+  }
+}
+
+@media screen and (max-width: $tablet - 1) {
+  .locations-restaurant {
+    height: 16px;
+  }
+}
+
+@media screen and (min-width: $tablet) {
+  .locations-restaurant {
+    font-size: 16px;
+
+    display: inline-flex;
+    margin-bottom: 30px;
+    padding-left: 16px;
+    padding-right: 16px;
+    min-width: 73px;
+
+    &.locations-ftruck {
+      min-width: 138px;
+    }
   }
 }
 
