--- a/src/partials/site-nav.html
+++ b/src/partials/site-nav.html
@@ -1,15 +1,20 @@
 <header class="site-nav">
   <div class="container">
     <div class="container-site-nav">
-      <img class="logo" src="../src/images/site-nav/logo.png">
+      <a href="./"><img class="logo" src="../src/images/site-nav/logo.png"></a>
       <ul class="site-nav-list">
-        <li class="site-nav-item"><a href="" class="link link-site-nav">Home</a></li>
-        <li class="site-nav-item"><a href="" class="link link-site-nav">About us</a></li>
-        <li class="site-nav-item"><a href="" class="link link-site-nav">How it’s made?</a></li>
-        <li class="site-nav-item"><a href="" class="link link-site-nav">Our products</a></li>
-        <li class="site-nav-item"><a href="" class="link link-site-nav">Contact</a></li>
+        <li class="site-nav-item"><a href="" class="link-site-nav">Home</a></li>
+        <li class="site-nav-item"><a href="" class="link-site-nav">About us</a></li>
+        <li class="site-nav-item"><a href="" class="link-site-nav">How it’s made?</a></li>
+        <li class="site-nav-item"><a href="" class="link-site-nav">Our products</a></li>
+        <li class="site-nav-item"><a href="" class="link-site-nav">Contact</a></li>
       </ul>
-      <button class="btn-site-nav burger-menu"   data-menu-button> <span></span> </button>
+      <button class="btn-site-nav burger-menu" data-menu-button aria-expanded="true"> 
+        <span class="icon-true-site-nav"></span>
+        <svg class="icon-false-site-nav" width="17" height="17">
+          <use href="../src/images/svg/sprite.svg#icon-close-cross"></use>
+        </svg>
+      </button>
       <button class="container-btn-site-nav btn-site-nav-desktop btn-site-nav">
         <span class="">
           Buy now
@@ -18,11 +23,9 @@
           <use href="../src/images/svg/sprite.svg#icon-bracket-right"></use>
         </svg>
       </button>
-      <div class="mobile-nav">
+      <div class="mobile-nav" data-menu>
         <button class="btn-site-nav close-btn-site-nav">
-          <svg width="17" height="17">
-            <use href="../src/images/svg/sprite.svg#icon-close-cross"></use>
-          </svg>
+          
         </button>
         <button class="container-btn-site-nav btn-site-nav">
           <span >
@@ -32,12 +35,12 @@
             <use href="../src/images/svg/sprite.svg#icon-bracket-right"></use>
           </svg>
         </button>
-        <ul class="mobile-nav-list" data-menu>
-          <li class="site-nav-item"><a href="" class="link link-mobile-site-nav">Home</a></li>
-          <li class="site-nav-item"><a href="" class="link link-mobile-site-nav">About us</a></li>
-          <li class="site-nav-item"><a href="" class="link link-mobile-site-nav">How it’s made?</a></li>
-          <li class="site-nav-item"><a href="" class="link link-mobile-site-nav">Our products</a></li>
-          <li class="site-nav-item"><a href="" class="link link-mobile-site-nav">Contact</a></li>
+        <ul class="mobile-nav-list">
+          <li class="site-nav-item"><a href="" class="link-mobile-site-nav">Home</a></li>
+          <li class="site-nav-item"><a href="" class="link-mobile-site-nav">About us</a></li>
+          <li class="site-nav-item"><a href="" class="link-mobile-site-nav">How it’s made?</a></li>
+          <li class="site-nav-item"><a href="" class="link-mobile-site-nav">Our products</a></li>
+          <li class="site-nav-item"><a href="" class="link-mobile-site-nav">Contact</a></li>
         </ul>
       </div>
     </div>
