--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -5,7 +5,9 @@
     <button type="button" class="hero__button recipe"><a class="anchor__link__recipe" href="#how-it’s-made">How its made?</a> </button>
     <div class="hero__text__box">
       <p class="hero__text">Lorem ipsum dolor sit amet,<br> consectetur adipiscing elit,<br> sed do eiusmod tempor<br> incididunt ut labore et</p>
+      <a href="" class="svg__link"></a>
     </div>
+    
     <div class="hero__text cafe">16 <span class="hero__span">cafes</span> </div>
     <div class="hero__text truck">23 <span class="hero__span">food trucks</span> </div>
   </div>
