--- a/src/sass/_hero.scss
+++ b/src/sass/_hero.scss
@@ -201,7 +201,7 @@
     height: 78px;
   }
 }
-.hero__text__box::after {
+.svg__link {
   display: inline-block;
   position: absolute;
   content: '';
