--- a/src/partials/manufacture.html
+++ b/src/partials/manufacture.html
@@ -1,7 +1,7 @@
 <section class="manufacture">
   <div class="container">
     <h3 class="manu__subtitle">tradition and love</h3>
-    <h2 class="manu__title" id="how-it’s-made">how it’s made?</h2>
+    <h2 class="manu__title">how it’s made?</h2>
     <div class="manu__cow">
       <picture>
         <source srcset="
