Переробив кнопки в посилання з якорями products та manufacture

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,8 +1,8 @@
 <div class="hero">
   <div class="hero__container">
     <h1 class="hero__title">ice cream <br> made with <br><span class="hero__title__text">passion</span></h1>
-    <button type="button" class="hero__button products"><a class="anchor__link__products" href="#our-product">Products</a> </button>
-    <button type="button" class="hero__button recipe"><a class="anchor__link__recipe" href="#manufacture">How its made?</a> </button>
+    <a class="anchor__link products" href="#products">Products</a>
+    <a class="anchor__link recipe" href="#manufacture">How its made?</a>
     <div class="hero__text__box">
       <p class="hero__text">Lorem ipsum dolor sit amet,<br> consectetur adipiscing elit,<br> sed do eiusmod tempor<br> incididunt ut labore et</p>
       <a href="" class="svg__link"></a>
