--- a/src/partials/site-nav.html
+++ b/src/partials/site-nav.html
@@ -1,7 +1,7 @@
 <header class="site-nav">
   <div class="container">
     <div class="container-site-nav">
-      <a href="./"><img class="logo" src="../src/images/site-nav/logo.png"></a>
+      <a href="./"><img class="logo-site-nav" src="../src/images/site-nav/logo.png"></a>
       <ul class="site-nav-list">
         <li class="site-nav-item"><a href="" class="link-site-nav">Home</a></li>
         <li class="site-nav-item"><a href="" class="link-site-nav">About us</a></li>
@@ -9,7 +9,7 @@
         <li class="site-nav-item"><a href="" class="link-site-nav">Our products</a></li>
         <li class="site-nav-item"><a href="" class="link-site-nav">Contact</a></li>
       </ul>
-      <button class="btn-site-nav burger-menu" data-menu-button aria-expanded="true"> 
+      <button class="btn-site-nav burger-menu-site-nav" data-menu-button aria-expanded="true"> 
         <span class="icon-true-site-nav"></span>
         <svg class="icon-false-site-nav" width="17" height="17">
           <use href="../src/images/svg/sprite.svg#icon-close-cross"></use>
@@ -23,7 +23,7 @@
           <use href="../src/images/svg/sprite.svg#icon-bracket-right"></use>
         </svg>
       </button>
-      <div class="mobile-nav" data-menu>
+      <div class="mobile-nav-site-nav" data-menu>
         <button class="btn-site-nav close-btn-site-nav">
           
         </button>
