--- a/src/partials/comments.html
+++ b/src/partials/comments.html
@@ -1,12 +1,12 @@
 <section class="comments">
   <div class="container">
     <div class="comments-container">
-      <h2 class="visually-hidden"></h2>
+      <h2 class="visually-hidden">Slider</h2>
       <!-- Ваш код здесь -->
       <div class="comments-slider">
         <div class="comment-slider-item">
           <picture class="comments-foto">
-            <source
+            <source 
               srcset="
                 ./images/comments/testimonials-1.jpg    1x,
                 ./images/comments/testimonials-1@2x.jpg 2x
@@ -75,7 +75,7 @@
         </div>
 
         <div class="comment-slider-item">
-          <!-- <div class="zaglushka-foto"></div> -->
+          
           <picture class="comments-foto">
             <source
               srcset="
@@ -142,7 +142,7 @@
             <div class="dot"></div>
           </div>
           <!-- your content -->
-          <div class="comment-local">Emily, Los Angeles</div>
+          <div class="comment-local">Jessica, California</div>
         </div>
         <div class="comment-slider-item">
           <picture class="comments-foto">
@@ -211,67 +211,9 @@
             <div class="dot"></div>
           </div>
           <!-- your content -->
-          <div class="comment-local">Emily, Los Angeles</div>
+          <div class="comment-local">Lisa, New York</div>
         </div>
       </div>
     </div>
   </div>
 </section>
-
-<!--  образец вставки контентного изображения
-  <picture>
-  <source
-    srcset="
-      ./images/products/mobile/product-1.webp    1x,
-      ./images/products/mobile/product-1@2x.webp 2x
-    "
-    media="(min-width: 320px) and (max-width: 767px)"
-    type="image/webp"
-  />
-  <source
-    srcset="
-      ./images/products/tablet/product-1.webp    1x,
-      ./images/products/tablet/product-1@2x.webp 2x
-    "
-    media="(min-width: 768px) and (max-width: 1199px)"
-    type="image/webp"
-  />
-  <source
-    srcset="
-      ./images/products/desktop/product-1.webp    1x,
-      ./images/products/desktop/product-1@2x.webp 2x
-    "
-    media="(min-width: 1200px)"
-    type="image/webp"
-  />
-  <source
-    srcset="
-      ./images/products/mobile/product-1.png    1x,
-      ./images/products/mobile/product-1@2x.png 2x
-    "
-    media="(min-width: 320px) and (max-width: 767px)"
-  />
-  <source
-    srcset="
-      ./images/products/tablet/product-1.png    1x,
-      ./images/products/tablet/product-1@2x.png 2x
-    "
-    media="(min-width: 768px) and (max-width: 1199px)"
-  />
-  <source
-    srcset="
-      ./images/products/desktop/product-1.png    1x,
-      ./images/products/desktop/product-1@2x.png 2x
-    "
-    media="(min-width: 1200px)"
-  />
-  <img
-    class=""
-    srcset="
-      ./images/products/mobile/product-1.png    1x,
-      ./images/products/mobile/product-1@2x.png 2x
-    "
-    src="./images/products/mobile/product-1.png"
-    alt="Описание"
-  />
-</picture> -->
