--- a/src/sass/_comments.scss
+++ b/src/sass/_comments.scss
@@ -1,18 +1,15 @@
 .comments-container {
   padding-top: 80px;
   padding-bottom: 50px;
-  //  padding-bottom: 86px;
   user-select: none;
 
   @media screen and(min-width: $tablet) and (max-width: 1199px) {
-    // max-width: 620px;
     padding-top: 121px;
     // padding-bottom: 119px;
     padding-right: 0;
     padding-left: 0;
   }
   @media screen and(min-width: $desktop) {
-    // max-width: 926px;
     padding-top: 121px;
     // padding-bottom: 119px;
     padding-right: 0;
@@ -48,25 +45,33 @@
   list-style: none;
   text-align: center;
   margin: 0;
+ line-height: 0; 
 }
 
 .comments-slick-dots li {
   position: relative;
   display: inline-block;
-  width: 20px;
-  height: 20px;
-  margin: 0 5px;
+  width: 12px;
+  height: 12px;
+  margin-top: 0;
+  margin-bottom: 0;
+  margin-left: 0;
+  
   padding: 0;
   cursor: pointer;
+  
+  &:not(:last-child) {
+    margin-right: 18px;
+  }
 }
 
 .comments-slick-dots li button {
   font-size: 0;
   line-height: 0;
   display: block;
-  width: 20px;
-  height: 20px;
-  padding: 5px;
+  width: 12px;
+  height: 12px;
+  padding: 0;
   cursor: pointer;
   color: transparent;
   border: 0;
@@ -87,7 +92,7 @@
 .comments-slick-dots li button:before {
   font-family: 'slick';
   font-size: 6px;
-  line-height: 20px;
+  line-height: 12px;
   position: absolute;
   top: 0;
   left: 0;
@@ -117,7 +122,7 @@
 
 .comment-text-container {
   position: relative;
-  z-index: -5;
+  z-index: -2;
   background-color: $alternate-bg-color;
 
   @media screen and (max-width: 767px) {
@@ -139,25 +144,23 @@
   font-family: $primary-font;
   font-weight: 500;
   text-align: center;
-  line-height: 2.58;
+  
   letter-spacing: 0.04em;
   color: $black;
 
   @media screen and (max-width: 767px) {
-    padding: 41px 50px 20px 50px;
+    padding: 40px 50px 20px 50px;
     font-size: 12px;
-    line-height: 2;
+    line-height: 2.5;
   }
 
   @media screen and (min-width: $tablet) and (max-width: 1199px) {
-    // padding: 47px 3px 28px 0px;
-    padding-top: 47px;
+    padding-top: 50px;
     padding-bottom: 28px;
     padding-right: 36px;
     padding-left: 60px;
     font-size: 14px;
     line-height: 2;
-    // width: 544px;
   }
 
   @media screen and (min-width: $desktop) {
@@ -187,7 +190,6 @@
   height: 40px;
 
   background-image: url('../images/svg/slick-bg.svg');
-
   fill: $primary-decor-color;
   background-repeat: no-repeat;
   background-size: contain;
@@ -199,7 +201,6 @@
 
   @media screen and(min-width: $desktop) {
     top: 22%;
-    // left: 50px;
   }
 }
 
@@ -253,35 +254,14 @@
   }
 }
 
-// .slider-dots {
-//     display: flex;
-//     justify-content: center;
-
-//   & .comment-icon-home {
-//     width: 12.4px;
-//     height: 12px;
-//     fill: $home-decor-color;
-//   }
-
-//     & .dot {
-//     width: 12px;
-//     height: 12px;
-//     border-radius: 50%;
-//      background-color: $largecircle-decor-color;
-
-//  }
-//     & .dot {
-//         margin-left: 18px;
-//     }
-// }
-
 .comment-local {
-  margin-top: 15px;
-  margin-bottom: 30px;
+  margin-top: 18px;
+  margin-bottom: 30px; 
+
   font-family: $primary-font;
   font-weight: 500;
-
-  line-height: 1.85;
+  line-height: 1.8;
+  // line-height: 1.85;
   text-align: center;
   letter-spacing: 0.04em;
   font-size: 14px;
@@ -290,75 +270,12 @@
     margin-top: 14px;
     margin-bottom: 35px;
     font-size: 16px;
-    line-height: 1.875;
+    line-height: 1.59;
   }
   @media screen and(min-width: $desktop) {
-    margin-top: 12px;
-    margin-bottom: 32px;
+    margin-top: 15px;
+    margin-bottom: 35px;
     font-size: 20px;
+    line-height: 1.59;
   }
 }
-
-.zaglushka-foto {
-  margin-left: auto;
-  margin-right: auto;
-  width: 85px;
-  height: 85px;
-  border-radius: 50%;
-  background-color: crimson;
-}
-.zaglushka-home {
-  width: 12px;
-  height: 12px;
-  border-radius: 50%;
-  background-color: crimson;
-}
-
-// .comment-dekorline::after {
-//   content: '';
-//   display: block;
-
-//   width: 180px;
-//   height: 1px;
-//   background-color:  $primary-decor-color;
-// @media screen and(min-width: $tablet) {
-//   width: 524px;
-// }
-// }
-
-// .comment-text-mobile {
-//     @media screen and (min-width: $tablet) {
-//       display: none;
-//     }
-// }
-
-// // .comment-text-tablet {
-// //     @media screen and (min-width: $tablet) and (max-width: 1199px){
-// //       display: none;
-// //     }
-// // }
-
-// .comment-text-tablet {
-//   @media screen and (min-width: $desktop) and (max-width: 319px){
-//     display: none;
-//   }
-// }
-
-// .comment-text-desktop {
-//   @media screen  and (max-width: 1199px) {
-//     display: none;
-//   }
-// }
-
-//  .comment-text-mobile,
-//  .comment-text-desktop,
-//   .comment-text-tablet {
-//     display: flex;
-//     flex-direction: column;
-//   }
-
-// .comment-text-container {
-//   display: flex;
-//     flex-direction: column;
-//     justify-content: center;
-// }
